# ml-experiment-agent

./: .gitignore  pyproject.toml  run.py
.github/workflows/: ci.yml
agent/core/: datasets.py  exceptions.py  loop.py  planner.py  types.py
agent/gate/: checks.py  gate.py
agent/scaffold/: generator.py
agent/tools/: _data_loader.py  _models.py  compare_models.py  cross_validate.py  feature_importance.py  inspect_data.py  train_model.py
eval/: __init__.py  run_eval.py  scripted_planner.py  suite.py
tests/: test_compare_models.py  test_cross_validate.py  test_eval_integration.py  test_feature_importance.py  test_gate.py  test_inspect_data.py  test_loop.py  test_planner.py  test_scaffold.py  test_train_model.py
