[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Ship only the agent package; eval/ is a dev-time test harness imported from
# the repo root (keeps flat-layout discovery from tripping over it).
[tool.setuptools.packages.find]
include = ["agent*"]

[project]
name = "ml-experiment-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]
# Evaluation harness — used by the eval/ package to score the real agent.
eval = ["agent-eval @ git+https://github.com/WFullen94/agent-eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
